test_report.txt

> restaurant-menu@0.1.0 test
> react-scripts test --coverage

PASS src/components/RatingFeature.test.tsx
FAIL src/components/SelectRole.test.tsx
  ● SelectRole tests › There is initially 2 options

    expect(received).toEqual(expected) // deep equality

    Expected: 2
    Received: 3

      22 |         );
      23 |         const options = screen.getByRole("combobox") as HTMLSelectElement;
    > 24 |         expect(options.options.length).toEqual(2);
         |                                        ^
      25 |     });
      26 |     test("SelectRole is initially Owner", () => {
      27 |         render(

      at Object.<anonymous> (src/components/SelectRole.test.tsx:24:40)

PASS src/components/NavBar.test.tsx
PASS src/components/DeliveryDropDown.test.tsx
FAIL src/App.test.tsx
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    /home/runner/work/restaurant-menu/restaurant-menu/node_modules/react-dnd/dist/index.js:1
    ({"Object.<anonymous>":function(module,exports,require,__dirname,__filename,jest){export * from './core/index.js';
                                                                                      ^^^^^^

    SyntaxError: Unexpected token 'export'

      14 | } from "@chakra-ui/react";
      15 |
    > 16 | import { useDrag, useDrop } from "react-dnd";
         | ^
      17 | import { foodProps } from "../interfaces/Food";
      18 | import foodList from "../data/foods.json";
      19 | import EditFoodTabs from "./EditFoodTabs";

      at Runtime.createScriptFromCode (node_modules/jest-runtime/build/index.js:1728:14)
      at Object.<anonymous> (src/components/EditFoodList.tsx:16:1)
      at Object.<anonymous> (src/pages/EditFood.tsx:6:1)
      at Object.<anonymous> (src/App.tsx:2:1)
      at Object.<anonymous> (src/App.test.tsx:3:1)
      at TestScheduler.scheduleTests (node_modules/@jest/core/build/TestScheduler.js:333:13)
      at runJest (node_modules/@jest/core/build/runJest.js:404:19)
      at _run10000 (node_modules/@jest/core/build/cli/index.js:320:7)
      at runCLI (node_modules/@jest/core/build/cli/index.js:173:3)

-----------------------|---------|----------|---------|---------|-------------------
File                   | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
-----------------------|---------|----------|---------|---------|-------------------
All files              |   10.59 |     7.58 |   11.25 |   10.63 |                   
 src                   |       0 |      100 |       0 |       0 |                   
  App.tsx              |       0 |      100 |       0 |       0 | 13                
 src/components        |   12.64 |     8.85 |   13.13 |   12.76 |                   
  AddDeleteUsers.tsx   |       0 |        0 |       0 |       0 | 22-135            
  AddFoodUI.tsx        |       0 |        0 |       0 |       0 | 19-45             
  CheckoutList.tsx     |       0 |        0 |       0 |       0 | 24-216            
  DeliveryDropDown.tsx |   66.66 |      100 |      50 |   66.66 | 49,75             
  EditFoodList.tsx     |       0 |        0 |       0 |       0 | 22-169            
  EditFoodMenu.tsx     |       0 |        0 |       0 |       0 | 8-41              
  EditFoodTabs.tsx     |       0 |        0 |       0 |       0 | 37-213            
  EditFoodUI.tsx       |       0 |        0 |       0 |       0 | 27-150            
  FoodItem.tsx         |       0 |        0 |       0 |       0 | 18-61             
  ItemListUI.tsx       |       0 |        0 |       0 |       0 | 11-36             
  NavBar.tsx           |     100 |      100 |     100 |     100 |                   
  RatingFeature.tsx    |      80 |       50 |   66.66 |      80 | 21                
  SearchBar.tsx        |       0 |        0 |       0 |       0 | 9-227             
  SelectRole.tsx       |   96.42 |    68.75 |     100 |   96.29 | 71                
 src/interfaces        |       0 |        0 |       0 |       0 |                   
  CustomerList.ts      |       0 |        0 |       0 |       0 |                   
  EmployeeList.ts      |       0 |        0 |       0 |       0 |                   
  Food.ts              |       0 |        0 |       0 |       0 |                   
  ListOfCustomers.ts   |       0 |        0 |       0 |       0 |                   
  OwnerFoodItem.ts     |       0 |        0 |       0 |       0 |                   
  OwnerList.ts         |       0 |        0 |       0 |       0 |                   
  User.ts              |       0 |        0 |       0 |       0 |                   
 src/pages             |       0 |        0 |       0 |       0 |                   
  AboutUs.tsx          |       0 |      100 |       0 |       0 | 13                
  AddFood.tsx          |       0 |        0 |       0 |       0 | 19-229            
  EditFood.tsx         |       0 |        0 |       0 |       0 | 11                
  EditUsers.tsx        |       0 |      100 |       0 |       0 | 5                 
  Landing.tsx          |       0 |      100 |       0 |       0 | 11                
  RemoveFood.tsx       |       0 |        0 |       0 |       0 | 25-151            
-----------------------|---------|----------|---------|---------|-------------------
Test Suites: 2 failed, 3 passed, 5 total
Tests:       1 failed, 22 passed, 23 total
Snapshots:   0 total
Time:        6.726 s
Ran all test suites.
